For 1.19.8:
	- Javascript was not thread-safe; should be ok now.

	- Javascript/PROTO MF*nodes also had problems with routing; fixed. (see next fix, below)

	- ROUTE bug for some MF* nodes was fixed in 1.19.7, but fix was edited out
	  from CParseParser.c; re-applied.

	- add/removeChildren routing now done before Scenegraph renders, rather than trying to
	  second guess routes in CRoutes_Register.

	- TouchSensor bug (where the javascript sphere box test would fail) fixed.

For 1.19.7:

	- Javascript MFNode work - should be ok now??

	- work on mouse-sensitive nodes; when they are disabled, mouse does not
	  change shape, and nodes are ignored. Works dynamically; scene graph
	  is pruned when sensitive nodes become disabled.

	- Classic VRML parser routing work.

	- fixed (linux) snapshot arguments in CFrontEnd/fwopts.c 

	- EXTERNPROTOS should be working in "classic" VRML Parser

	- PROTO IS fields now can be nested, and now work properly with SCRIPTS 

	- use GL_ARB_occlusion_query for visibility culling, and VisibilitySensors.
	  Computers that do not have GL_ARB_occlusion_query will not have a 
	  functioning VisibilitySensor.

	- Mipmap textures (PixelTexture and ImageTexture only)

For 1.19.6:
	- MidiControl - work on event routing of values (Strings changed, etc).

	- Javascript - more work on efficiency of eventIn/Outs.

	- Text node work.

	- bug on command-line execution on OS X fixed.


For 1.19.5:
	- more plugin work on Linux and OS X.

	- VRML Parsing - reduce strictness to allow Lightwave VRML output to load.
	  (see comments in CFuncs/CParseLexer.c)

	- Javascript MFString routing - concatenate FreeWRL's MFString nodes to the length that
	  a Javascript MFString eventOut specifies.

	- JAVA EAI/SAI - callbacks expanded to allow for all VRML/X3D data types.

For 1.19.4:
	- Compile changes to allow rpms to be built and distributed for Fedora Core 6;

	- AMD64 browser plugin now compiled by default;

	- Plugin code changed to better locate initial URL;